# VideoPlayer

./: AVCore.h  AVSynchronizer.cpp  CMakeLists.txt  ConcurrentQueue.h  Converter.cpp  Demuxer.cpp  Frame.cpp  main.cpp  text.md
AVCore/: AVCore.h  CMakeLists.txt  Converter.cpp  Decoder.cpp  Demuxer.cpp  Frame.cpp  Packet.cpp  Resample.cpp  SDLVideoRender.cpp
AVThread/: Common.h  DecodeThread.cpp  DecodeThread.h  DemuxThread.cpp  DemuxThread.h  EventLoop.cpp  EventLoop.h  VideoRenderThread.cpp  VideoRenderThread.h
reference_code/: .gitignore  CMakeLists.txt
reference_code/AVCore/: AVCore.h  AVCore现有问题.md  Atempo.cpp  AudioVideoSynchronizer.cpp  CMakeLists.txt  Converter.cpp  Decoder.cpp  Demuxer.cpp  Frame.cpp  Packet.cpp  QtAudioRender.cpp  QtVideoRender.cpp  Resample.cpp  SDLVideoRender.cpp  sonic_lite.cpp  sonic_lite.h
reference_code/AVPlayer/: AVPlayer.cpp  AVPlayer.h  CMakeLists.txt
reference_code/AVThread/: AVThread.h  AVThread曾遇到的问题.md  AVThread现有问题.md  AudioRenderThread.cpp  AudioRenderThread.h  CMakeLists.txt  Common.h  DecodeThread.cpp  DecodeThread.h  DemuxThread.cpp  DemuxThread.h  ThreadEventLoop.cpp  ThreadEventLoop.h  VideoRenderThread.cpp  VideoRenderThread.h  readme.md
reference_code/Common/: ConcurrentQueue.h  DelayQueue.h  MPMCQueue.h  MessageBus.hpp.bak
reference_code/Common/pipeline/: mpmc_pipeline.hpp  mpmc_queue.hpp  pipeline.h  platform.hpp  threadpool.hpp
reference_code/Doc/: AVFrame结构分析.md  readme.md
reference_code/Log/: Log.h
reference_code/Test/: CMakeLists.txt  TestAVPlayer.cpp  TestAVSync.cpp  TestSDL.cpp
